# grid

./: .gitignore  BUILD  GRPC.md  README.md  WORKSPACE  actor.go  actor_test.go  backoff.go  cfg.go  cfg_test.go  client.go  client_health.go  client_health_test.go  client_test.go  conn.go  conn_test.go  context.go  context_test.go  coordopts.go  diag.go  elect.go  elect_test.go  errors.go  flow.go  go.mod  go.sum  grid.go  handler.go  kafka.go  kafka_test.go  leader.go  mailbox.go  mailbox_test.go  manager.go  manager_test.go  mesg.go  name.go  name_test.go  namespace_test.go  query.go  (+17 more)
.github/workflows/: test.yml
balancer/: balancer.go  balancer_test.go  metafora_test.go
bench/: Readme.md  clientserver_roundtrip_bench_test.go  clientserver_roundtrip_test.go  codec_bench_test.go  msgs.pb.go  msgs.proto  testdata_test.go  testserver_test.go
codec/: BUILD.bazel  registry.go  registry_test.go
codec/protomessage/: BUILD.bazel  protomessage.pb.go  protomessage.proto
condition/: README.md  condition.go  condition_test.go
condition/memcondition/: memcondition_test.go
example/: example.go
example/benchgrid/: README.md  consumer.go  datamaker.go
example/firstgrid/: README.md  main.go
example/flowgrid/: actormaker.go  consumer.go  datamaker.go  dfa.go  leader.go  main.go  producer.go  types.go
example/gridbench/: actormaker.go  consumer.go  datamaker.go  leader.go  main.go  maker.go  producer.go  types.go
example/load/: load.go
example/msgcount/: counter.go  main.go  maker.go  producer.go  reader.go  sender.go  types.go
example/simple/: simple.go
example/wordcount/: main.go
examples/hello/: BUILD.bazel  README.md  main.go
examples/requestreply/: BUILD.bazel  README.md  main.go  msgs.pb.go  msgs.proto
grid/: kafka.go  manager.go  manager_test.go
grid.v2/: README.md  conn.go  conn_test.go  grid.go
grid.v2/balancer/: balancer.go  testdata_test.go
grid.v2/condition/: condition.go  condition_test.go
grid.v2/natsunit/: natsunit.go
grid.v2/ring/: multi.go  multi_test.go  ring.go  ring_test.go
grid.v3/: README.md  actor.go  cfg.go  cfg_test.go  client.go  client_test.go  conn.go  context.go  context_test.go  envelope.go  errors.go  grid.go  grid_test.go  gridexample_test.go  handler.go  mailbox.go  msg.go  msg_test.go  name.go  name_test.go  peers_test.go  query.go  query_test.go  request.go  request_test.go  server.go  server_test.go  stack_test.go  util.go  util_test.go  wire.pb.go  wire.proto
grid.v3/codec/: gob.go  protobuf.go  registry.go  registry_test.go  types.go
grid.v3/discovery/: discovery.go  discovery_test.go
grid.v3/message/: message.go  message_test.go  messenger.go  wire.pb.go  wire.proto
grid.v3/messenger/: messenger.go  messenger_test.go  wire.pb.go  wire.proto
grid.v3/natsunit/: natsunit_test.go
grid.v3/registry/: registry.go  registry_test.go
grid2/: README.md  actor.go  conn.go  grid.go  handler.go  util.go  util_test.go
load_test/: load.go
natsunit/: natsunit.go
registry/: BUILD.bazel  registry.go  registry_test.go
ring/: BUILD.bazel  README.md  multi.go  multi_test.go  ring.go  ring_test.go
testetcd/: BUILD.bazel  etcdserver.go
testutil/: memlog.go  memlog_test.go
(+38 files in other folders)
