load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["registry.go"],
    importpath = "github.com/lytics/grid/registry",
    visibility = ["//visibility:public"],
    deps = ["@io_etcd_go_etcd//clientv3:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["registry_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testetcd:go_default_library",
        "@io_etcd_go_etcd//clientv3:go_default_library",
    ],
)
