load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "multi.go",
        "ring.go",
    ],
    importpath = "github.com/lytics/grid/ring",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "multi_test.go",
        "ring_test.go",
    ],
    embed = [":go_default_library"],
)
