load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protomessage_proto",
    srcs = ["protomessage.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protomessage_go_proto",
    importpath = "github.com/lytics/grid/codec/protomessage",
    proto = ":protomessage_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":protomessage_go_proto"],
    importpath = "github.com/lytics/grid/codec/protomessage",
    visibility = ["//visibility:public"],
)
