load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lytics/grid/examples/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@io_etcd_go_etcd//clientv3:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
