load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "main_proto",
    srcs = ["msgs.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "main_go_proto",
    importpath = "github.com/lytics/grid/examples/requestreply",
    proto = ":main_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    embed = [":main_go_proto"],
    importpath = "github.com/lytics/grid/examples/requestreply",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@io_etcd_go_etcd//clientv3:go_default_library",
    ],
)

go_binary(
    name = "requestreply",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
